<resources>
    <string name="app_name">Twidlee</string>
    <string name="map_api_key">AIzaSyCxIDs00jW1p6E0npTG8rpSMgFzaddd7U0</string>
    <string name="static_map_api_key">AIzaSyCY1EAZl4MQS94EQplvmMjPttvM7bAdJss</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_reservations">Reservations</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_history">History</string>
    <string name="menu_account">Account</string>
    <string name="title_home">Home</string>
    <string name="title_reservations">Reservations</string>
    <string name="title_history">History</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_account">Account</string>
    <string name="title_filters">Filters</string>
    <string name="title_change_password">Change Password</string>
    <string name="offer_placeholder">%d more</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_code">Code</string>
    <string name="hint_login">Login</string>
    <string name="hint_sign_up">Sign Up</string>
    <string name="hint_send">Send</string>
    <string name="hint_send_code">Send code</string>
    <string name="hint_done">Done</string>
    <string name="hint_resend">Resend</string>
    <string name="hint_create_new_account">Create New Account</string>
    <string name="hint_forget_password">Forget Password?</string>
    <string name="search_hint">Restaurant Name, Cuisine</string>
    <string name="hint_reserve">Reserve</string>
    <string name="hint_restaurant_hours">Restaurant hours </string>
    <string name="hint_restaurant_open">"Open"</string>
    <string name="hint_restaurant_closed">"Closed"</string>
    <string name="hint_submit">Submit</string>
    <string name="hint_add_comment">Comment</string>
    <string name="hint_feedback">Feedback</string>
    <string name="hint_feedback_deal_not_honored">Deal not honored</string>
    <string name="hint_feedback_other">Other</string>
    <string name="hint_restaurant_review_latest_rating">Your Latest Rating</string>
    <string name="hint_restaurant_rating_overall">Overall</string>
    <string name="hint_restaurant_rating_service">Service</string>
    <string name="hint_restaurant_rating_food_quality">Food Quality</string>
    <string name="hint_restaurant_rating_cleanliness">Cleanliness</string>
    <string name="hint_restaurant_rating_price">Price</string>
    <string name="hint_restaurant_rating_added_on">Added on</string>
    <string name="hint_restaurant_rating_customer_review">Customer Reviews</string>
    <string name="hint_restaurant_rating_out_of_5_stars">Out of 5 stars</string>
    <string name="hint_profile">Profile</string>
    <string name="hint_terms_conditions">Term &amp; Conditions</string>
    <string name="hint_privacy_policy">Privacy Policy</string>
    <string name="hint_about_us">About Us</string>
    <string name="hint_logout">Logout</string>
    <string name="hint_push_notification">Favorites Notification</string>
    <string name="hint_email_notification">Email Notification</string>
    <string name="hint_notification">Notification</string>
    <string name="hint_show_discounts">Show Discounts</string>
    <string name="hint_other_deals">Other Deals</string>
    <string name="hint_dine_in_only">Dine In Only</string>
    <string name="hint_takeaway_only">Takeaway Only</string>
    <string name="hint_select_radius">Select Radius</string>
    <string name="hint_type">Type</string>
    <string name="hint_cuisines">Cuisines</string>
    <string name="hint_reset">Reset</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_password_dummy">********</string>
    <string name="hint_edit">Edit</string>
    <string name="hint_save">Save</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="enter_code">Enter Code</string>
    <string name="hint_forgot_password">Enter your registered phone number, we will send you a code you can use that code to change your password</string>
    <string name="action_ok">Ok</string>
    <string name="common_error_form_required_placeholder">%1$s is required</string>
    <string name="all_fields_are_required">%1$s required</string>
    <string name="common_error_form_invalid_value_for">Invalid value for %1$s</string>
    <string name="password_does_not_match">Password does not match with %1$s</string>
    <string name="continue_as_guest">Continue as Guest?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="wrong_code">You entered wrong code.</string>
    <string name="invalid_email">This email is not registered on Twidlee. Kindly make a new account.</string>
    <string name="email_already_exists">This email is already registered on Twidlee. Kindly use different email id.</string>
    <string name="mobile_number_already_exists">This mobile number is already registered on Twidlee. Kindly use different mobile number.</string>
    <string name="invalid_password">Invalid password. Please enter the correct password.</string>
    <string name="deal_expired">Expired</string>
    <string name="internet_unavailable">Internet not available. Please check your connection.</string>
    <string name="permission_location_message">To use this feature, allow us to access your location from your app permission settings.</string>
    <string name="permission_storage_message">Allow us to access your storage from your app permission settings.</string>
    <string name="reload">Unable to load result. Please try again.</string>
    <string name="title_restaurant">Restaurant</string>
    <string name="skip">Skip</string>
    <string name="deals">Deals</string>
    <string name="contact">Contact</string>
    <string name="reviews">Reviews</string>
    <string name="pictures">Pictures</string>
    <string name="menu">Menu</string>
    <string name="reservation_confirmed">Reservation Confirmed</string>
    <string name="dine_in">Dine in</string>
    <string name="take_away">Take away</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="take_away_time">Takeaway Time</string>
    <string name="guests">Guests</string>
    <string name="persons">Persons</string>
    <string name="number_of_persons">%s persons</string>
    <string name="error_select_guest">Please select number of Guests</string>
    <string name="error_select_arrival_time">Please select arrival time</string>
    <string name="error_select_feedback_type">Please select feedback type</string>
    <string name="error_select_rating_star">Please give rating</string>
    <string name="summary">Summary</string>
    <string name="member_since">Member Since</string>
    <string name="status">Status</string>
    <string name="reservations">Reservations</string>
    <string name="cancelled">Cancelled</string>
    <string name="no_show">No Show</string>
    <string name="redeemed">Redeemed</string>
    <string name="disclaimer">Alert! Your number of cancellations and no shows should not exceed more than 5 in a calendar year</string>
    <string name="error_select_redeem_type">Please select the Dine in or Take away option.</string>
    <string name="confirmation_code">Confirmation Code:</string>
    <string name="rate">Rate</string>
    <string name="title_dialog_cancel_reservation">Cancel Reservation</string>
    <string name="description_cancel_reservation">Do you really want to cancel the reservation?</string>
    <string name="meal_type">Meal Type:</string>
    <string name="code">Code:</string>
    <string name="place_order">Place Order:</string>
    <string name="exclusions">Exclusions:</string>
    <string name="description_redeem_reservation">"Redeemed for "</string>
    <string name="description_canceled_reservation">"Canceled by Restaurant at "</string>
    <string name="hint_guests_at">"guests at "</string>
    <string name="hint_confirm">Confirm</string>
    <string name="hint_share_intent">Deal Reservation Info</string>
    <string name="pick_image_intent">Choose image</string>
    <string name="message_no_favorites">No favorites found</string>
    <string name="message_no_history">No history found</string>
    <string name="message_password_changed">Password changed successfully</string>
    <string name="message_profile_updated">Profile updated successfully</string>
    <string name="message_verification_code">Enter verification code we have sent you</string>
    <string name="device_type">android</string>
    <string name="disclaimer_text">All prices are inclusive / exclusive of tax.</string>
    <string name="message_no_restaurant">No restaurant found</string>
    <string name="hint_resend_code">Resend code in </string>
    <string name="message_no_reservation">No reservation found</string>
    <string name="text_terms_services">
        "Twidlee is not a food vendor, does not own or operate any restaurant and does not accept any liability arising from the deals offered, sale or consumption of food at any restaurant.All discounts are offered solely by restaurants. It is the responsibility of the food vendor or the restaurant to adhere to all local laws and regulations that they are subjected to."
    </string>
</resources>