<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <include
        android:id="@+id/fragment_imageView_header"
        layout="@layout/header_brand_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_imageView_header">

        <TextView
            style="@style/TextAppearance.Text.RedColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/BaseLayout_rhythmHalf"
            android:fontFamily="@font/font_roboto_regular"
            android:text="@string/hint_forgot_password"
            android:textAlignment="center"
            android:textSize="12sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/BaseLayout_rhythm"
            android:layout_marginTop="@dimen/BaseLayout_rhythmHalf"
            android:layout_marginEnd="@dimen/BaseLayout_rhythm">

            <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_hideNameCode="true"
                app:ccp_hidePhoneCode="false"
                app:ccp_defaultCode="92"
                app:ccp_keyboardAutoPopOnSearch="false"
                app:ccp_showFullName="false"
                app:ccp_textSize="12sp"
                app:layout_constrainedWidth="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/numberForgotPassword"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.65">

            </com.rilixtech.widget.countrycodepicker.CountryCodePicker>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/numberForgotPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/BaseLayout_rhythmOneAndAHalf"
                android:hint="@string/hint_mobile_number"
                app:layout_constrainedWidth="true"
                app:layout_constraintBaseline_toBaselineOf="@id/ccp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/ccp"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/phone_number_profile"
                    style="@style/TextAppearance.Text.Medium.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/viewVerificationCodeForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/BaseLayout_rhythm"
            android:layout_marginTop="@dimen/BaseLayout_rhythmHalf"
            android:layout_marginEnd="@dimen/BaseLayout_rhythm"
            android:orientation="vertical"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/verificationCodeForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_verification_code">

                <EditText
                    style="@style/TextAppearance.Text.Medium.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="4" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPasswordForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/BaseLayout_rhythmThird"
                android:hint="@string/hint_new_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/changePasswordOld">

                <EditText
                    style="@style/TextAppearance.Text.Medium.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword">

                </EditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/BaseLayout_rhythmThird"
                android:hint="@string/hint_confirm_password"
                android:textColorHint="@color/color_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/changePasswordNew">

                <EditText
                    style="@style/TextAppearance.Text.Medium.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword">

                </EditText>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <Button
            android:id="@+id/buttonSendConfirmForgotPassword"
            style="@style/Button.Action.Primary"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/BaseLayout_rhythm"
            android:layout_marginTop="@dimen/BaseLayout_rhythmHalf"
            android:layout_marginEnd="@dimen/BaseLayout_rhythm"
            android:background="@drawable/button_background"
            android:text="@string/hint_send_code" />

        <TextView
            android:id="@+id/fragment_textView_signUp"
            style="@style/TextAppearance.Text.Link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/BaseLayout_rhythmHalf"
            android:layout_marginBottom="@dimen/BaseLayout_rhythmThird"
            android:fontFamily="@font/font_roboto_regular"
            android:text="@string/hint_create_new_account"
            android:textAlignment="center"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


